# CasperCredIQ

./: .gitignore  README.md  build_output.txt  build_output_2.txt  next.config.js  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/admin/: page.tsx
app/audit/: page.tsx
app/dashboard/: page.tsx
app/issue/: page.tsx
app/users/: page.tsx
app/verify/: page.tsx
backend/: casper.ts  check_keys.js  package-lock.json  package.json  server.js  test_deploy_verify.js
backend/backend-ai/: aiServer.js  package-lock.json  package.json
backend/utils/: auditEventsService.js  eventDecoder.js
caspercred_final/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  calculate_dict.py  credential_1_raw.json  package-lock.json  test_caspercrediq.sh
caspercred_final/keys/: public_key_hex
caspercred_final/scripts/: brute-force-dicts.js  calculate-all-dicts.sh  check_cred.sh  compute-dicts.py  compute_dicts.py  contract_state.json  test_contract.sh  verify_credentials.js
caspercred_final/src/: lib.rs
components/: AIVerificationForm.tsx  AdminPanel.tsx  IssueCredential.tsx  RoleResources.tsx  VerifyStatus.tsx  WalletConnect.tsx
lib/: casper.ts  config.ts  wallet.ts
types/: index.ts
utils/: constants.ts
